--- a/Login/Login.html
+++ b/Login/Login.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Basketball-Shop</title>
+    <title>Sneakers</title>
     <link rel="stylesheet" href="Login.css">
 </head>
 <body>
 
     <header>
-        <h2 class="logo">Logo</h2>
+        <h2>logo</h2>
         <nav class="navgation">
             <button class="btnLogin-popup">login</button>
         </nav>
@@ -41,7 +41,7 @@
                     <label><input type="checkbox">Lembrar senha</label>
                     <a href="#">Esqueceu sua senha?</a>
                 </div>
-                <button type="submit" class="btn"><a href="/Pagina Inicial/PaginaInicial.html">Login</a></button>
+                    <button type="submit" class="btn"><a href="/Pagina Inicial/PaginaInicial.html">Login</a></button>
                 <div class="login-register">
                     <p>Não possui uma conta? <a href="#" class="register-link">Registre-se</a></p>
                 </div>
