--- a/Pagina Inicial/PaginaInicial.html
+++ b/Pagina Inicial/PaginaInicial.html
@@ -1,29 +1,246 @@
-<!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Basketball-Shop</title>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="PaginaInicial.css">
+    <title>Sneakers</title>
 </head>
+
 <body>
-
-    <header>
-        <h1>Basketball Shop</h1>
-        <nav>
-            <a href="#">Home</a>
-            <a href="#">Tenis</a>
-            <a href="#">Camisas</a>
-            <a href="#">Acessorios</a>
-            <a href="#">Times</a>
-        </nav>
-    </header>
-
-    <main>
-        <div class="PaginaInicial">
-            
+    <nav id="nav">
+        <div class="navTop">
+            <div class="navItem">
+                <img src="/img/sneakers.png" alt="">
+            </div>
+            <div class="navItem">
+                <div class="search">
+                    <input type="text" placeholder="Search..." class="searchInput">
+                    <img src="/img/search.png" width="20" height="20" alt="" class="searchIcon">
+                </div>
+            </div>
+            <div class="navItem">
+                <a href="/Login/Login.html"><button class="Login">Login</button></a>
+            </div>
         </div>
-    </main>
-    
+        <div class="navBottom">
+            <h3 class="menuItem">AIR FORCE</h3>
+            <h3 class="menuItem">JORDAN</h3>
+            <h3 class="menuItem">BLAZER</h3>
+            <h3 class="menuItem">CRATER</h3>
+            <h3 class="menuItem">HIPPIE</h3>
+        </div>
+    </nav>
+    <div class="slider">
+        <div class="sliderWrapper">
+            <div class="sliderItem">
+                <img src="/img/air.png" alt="" class="sliderImg">
+                <div class="sliderBg"></div>
+                <h1 class="sliderTitle">AIR FORCE 1</br> MID</h1>
+                <h2 class="sliderPrice">R$885</h2>
+                <a href="#product">
+                    <button class="buyButton">Compre Agora!</button>
+                </a>
+            </div>
+            <div class="sliderItem">
+                <img src="/img/jordan.png" alt="" class="sliderImg">
+                <div class="sliderBg"></div>
+                <h1 class="sliderTitle">AIR JORDAN</br> NOVA</br> TEMPORADA</h1>
+                <h2 class="sliderPrice">R$2,800</h2>
+                <a href="#product">
+                    <button class="buyButton">Compre Agora!</button>
+                </a>
+            </div>
+            <div class="sliderItem">
+                <img src="/img/blazer.png" alt="" class="sliderImg">
+                <div class="sliderBg"></div>
+                <h1 class="sliderTitle">BLAZER</h1>
+                <h2 class="sliderPrice">R$750</h2>
+                <a href="#product">
+                    <button class="buyButton">Compre Agora!</button>
+                </a>
+            </div>
+            <div class="sliderItem">
+                <img src="/img/crater.png" alt="" class="sliderImg">
+                <div class="sliderBg"></div>
+                <h1 class="sliderTitle">CRATER</h1>
+                <h2 class="sliderPrice">R$600</h2>
+                <a href="#product">
+                    <button class="buyButton">Compre Agora!</button>
+                </a>
+            </div>
+            <div class="sliderItem">
+                <img src="/img/hippie.png" alt="" class="sliderImg">
+                <div class="sliderBg"></div>
+                <h1 class="sliderTitle">HIPPIE</h1>
+                <h2 class="sliderPrice">R$300</h2>
+                <a href="#product">
+                    <button class="buyButton">Compre Agora!</button>
+                </a>
+            </div>
+        </div>
+    </div>
+   
+    <div class="features">
+        <div class="feature">
+            <img src="/img/shipping.png" alt="" class="featureIcon">
+            <span class="featureTitle">FRETE GRÁTIS</span>
+            <span class="featureDesc">Frete grátis para todo o Brasil em todos os pedidos.</span>
+        </div>
+        <div class="feature">
+            <img class="featureIcon" src="/img/return.png" alt="">
+            <span class="featureTitle">DEVOLUÇÃO EM 30 DIAS</span>
+            <span class="featureDesc">Devolução sem questionamentos e reembolso fácil em 14 dias.</span>
+        </div>
+        <div class="feature">
+            <img class="featureIcon" src="/img/gift.png" alt="">
+            <span class="featureTitle">GIFT CARDS</span>
+            <span class="featureDesc">Compre gifts-card e use códigos de cupom facilmente.</span>
+        </div>
+        <div class="feature">
+            <img class="featureIcon" src="/img/contact.png" alt="">
+            <span class="featureTitle">CONTATE-NOS!</span>
+            <span class="featureDesc">Mantenha contato por e-mail e pelo sistema de suporte.</span>
+        </div>
+    </div>
+
+    <div class="product" id="product">
+        <img src="/img/air.png" alt="" class="productImg">
+        <div class="productDetails">
+            <h1 class="productTitle">AIR FORCE</h1>
+            <h2 class="productPrice">R$885</h2>
+            <p class="productDesc">Lorem ipsum dolor sit amet consectetur impal adipisicing elit. Alias assumenda
+                dolorum
+                doloremque sapiente aliquid aperiam.</p>
+            <div class="colors">
+                <div class="color"></div>
+                <div class="color"></div>
+            </div>
+            <div class="sizes">
+                <div class="size">42</div>
+                <div class="size">43</div>
+                <div class="size">44</div>
+            </div>
+            <button class="productButton">Compre Agora!</button>
+        </div>
+        <div class="payment">
+            <h1 class="payTitle">informação Pessoal</h1>
+            <label>Nome e Sobrenome</label>
+            <input type="text" placeholder="Fulano Cliclano" class="payInput">
+            <label>Número de Telefone</label>
+            <input type="text" placeholder="+55 xxxxxxxxxxx" class="payInput">
+            <label>Endereço</label>
+            <input type="text" placeholder="Rua." class="payInput">
+            <h1 class="payTitle">informação do cartão</h1>
+            <div class="cardIcons">
+                <img src="/img/visa.png" width="40" alt="" class="cardIcon">
+                <img src="/img/master.png" alt="" width="40" class="cardIcon">
+            </div>
+            <input type="password" class="payInput" placeholder="Número do cartão">
+            <div class="cardInfo">
+                <input type="text" placeholder="mm" class="payInput sm">
+                <input type="text" placeholder="yyyy" class="payInput sm">
+                <input type="text" placeholder="cvv" class="payInput sm">
+            </div>
+            <button class="payButton">Confirmar!</button>
+            <span class="close">X</span>
+        </div>
+    </div>
+    <div class="gallery">
+        <div class="galleryItem">
+            <h1 class="galleryTitle">Be Yourself!</h1>
+            <img src="https://images.pexels.com/photos/9295809/pexels-photo-9295809.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
+                alt="" class="galleryImg">
+        </div>
+        <div class="galleryItem">
+            <img src="https://images.pexels.com/photos/1040427/pexels-photo-1040427.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
+                alt="" class="galleryImg">
+            <h1 class="galleryTitle">Este é o primeiro dia da sua nova vida</h1>
+        </div>
+        <div class="galleryItem">
+            <h1 class="galleryTitle">Just Do it!</h1>
+            <img src="https://images.pexels.com/photos/7856965/pexels-photo-7856965.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
+                alt="" class="galleryImg">
+        </div>
+    </div>
+    <div class="newSeason">
+        <div class="nsItem">
+            <img src="https://images.pexels.com/photos/4753986/pexels-photo-4753986.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
+                alt="" class="nsImg">
+        </div>
+        <div class="nsItem">
+            <h3 class="nsTitleSm">NOVIDADES DE INVERNO</h3>
+            <h1 class="nsTitle">Nova Temporada</h1>
+            <h1 class="nsTitle">Nova Coleção</h1>
+            <a href="#nav">
+                <button class="nsButton">ESCOLHA SEU ESTILO</button>
+            </a>
+        </div>
+        <div class="nsItem">
+            <img src="https://images.pexels.com/photos/7856965/pexels-photo-7856965.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
+                alt="" class="nsImg">
+        </div>
+    </div>
+    <footer>
+        <div class="footerLeft">
+            <div class="footerMenu">
+                <h1 class="fMenuTitle">Sobre-nós</h1>
+                <ul class="fList">
+                    <li class="fListItem">Empresa</li>
+                    <li class="fListItem">Contato</li>
+                    <li class="fListItem">Carreira</li>
+                    <li class="fListItem">Afiliados</li>
+                    <li class="fListItem">Lojas</li>
+                </ul>
+            </div>
+            <div class="footerMenu">
+                <h1 class="fMenuTitle">Links</h1>
+                <ul class="fList">
+                    <li class="fListItem">Suporte</li>
+                    <li class="fListItem">Reembolso</li>
+                    <li class="fListItem">FAQ</li>
+                    <li class="fListItem">Feedback</li>
+                    <li class="fListItem">Histórias</li>
+                </ul>
+            </div>
+            <div class="footerMenu">
+                <h1 class="fMenuTitle">Produtos</h1>
+                <ul class="fList">
+                    <li class="fListItem">Air Force</li>
+                    <li class="fListItem">Air Jordan</li>
+                    <li class="fListItem">Blazer</li>
+                    <li class="fListItem">Crater</li>
+                    <li class="fListItem">Hippie</li>
+                </ul>
+            </div>
+        </div>
+        <div class="footerRight">
+            <div class="footerRightMenu">
+                <h1 class="fMenuTitle">Assine nossa newsletter</h1>
+                <div class="fMail">
+                    <input type="text" placeholder="Seuemail@email.com" class="fInput">
+                    <button class="fButton">Entre!</button>
+                </div>
+            </div>
+            <div class="footerRightMenu">
+                <h1 class="fMenuTitle">Siga-nos</h1>
+                <div class="fIcons">
+                    <img src="/img/facebook.png" alt="" class="fIcon">
+                    <img src="/img/twitter.png" alt="" class="fIcon">
+                    <img src="/img/instagram.png" alt="" class="fIcon">
+                    <img src="/img/whatsapp.png" alt="" class="fIcon">
+                </div>
+            </div>
+            <div class="footerRightMenu">
+                <span class="copyright">Leonardo Gabriel. Todos os direitos reservados. 2025.</span>
+            </div>
+        </div>
+    </footer>
+    <script src="PaginaInicial.js"></script>
 </body>
+
 </html>
