--- a/Pagina Inicial/PaginaInicial.html
+++ b/Pagina Inicial/PaginaInicial.html
@@ -15,12 +15,12 @@
     <nav id="nav">
         <div class="navTop">
             <div class="navItem">
-                <img src="/img/sneakers.png" alt="">
+                <img src="../img/sneakers.png" alt="">
             </div>
             <div class="navItem">
                 <div class="search">
                     <input type="text" placeholder="Search..." class="searchInput">
-                    <img src="/img/search.png" width="20" height="20" alt="" class="searchIcon">
+                    <img src="../img/search.png" width="20" height="20" alt="" class="searchIcon">
                 </div>
             </div>
             <div class="navItem">
@@ -38,7 +38,7 @@
     <div class="slider">
         <div class="sliderWrapper">
             <div class="sliderItem">
-                <img src="/img/air.png" alt="" class="sliderImg">
+                <img src="../img/air.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
                 <h1 class="sliderTitle">AIR FORCE 1</br> MID</h1>
                 <h2 class="sliderPrice">R$885</h2>
@@ -47,7 +47,7 @@
                 </a>
             </div>
             <div class="sliderItem">
-                <img src="/img/jordan.png" alt="" class="sliderImg">
+                <img src="../img/jordan.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
                 <h1 class="sliderTitle">AIR JORDAN</br> NOVA</br> TEMPORADA</h1>
                 <h2 class="sliderPrice">R$2,800</h2>
@@ -56,7 +56,7 @@
                 </a>
             </div>
             <div class="sliderItem">
-                <img src="/img/blazer.png" alt="" class="sliderImg">
+                <img src="../img/blazer.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
                 <h1 class="sliderTitle">BLAZER</h1>
                 <h2 class="sliderPrice">R$750</h2>
@@ -65,7 +65,7 @@
                 </a>
             </div>
             <div class="sliderItem">
-                <img src="/img/crater.png" alt="" class="sliderImg">
+                <img src="../img/crater.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
                 <h1 class="sliderTitle">CRATER</h1>
                 <h2 class="sliderPrice">R$600</h2>
@@ -74,7 +74,7 @@
                 </a>
             </div>
             <div class="sliderItem">
-                <img src="/img/hippie.png" alt="" class="sliderImg">
+                <img src="../img/hippie.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
                 <h1 class="sliderTitle">HIPPIE</h1>
                 <h2 class="sliderPrice">R$300</h2>
@@ -87,29 +87,29 @@
    
     <div class="features">
         <div class="feature">
-            <img src="/img/shipping.png" alt="" class="featureIcon">
+            <img src="../img/shipping.png" alt="" class="featureIcon">
             <span class="featureTitle">FRETE GRÁTIS</span>
             <span class="featureDesc">Frete grátis para todo o Brasil em todos os pedidos.</span>
         </div>
         <div class="feature">
-            <img class="featureIcon" src="/img/return.png" alt="">
+            <img class="featureIcon" src="../img/return.png" alt="">
             <span class="featureTitle">DEVOLUÇÃO EM 30 DIAS</span>
             <span class="featureDesc">Devolução sem questionamentos e reembolso fácil em 14 dias.</span>
         </div>
         <div class="feature">
-            <img class="featureIcon" src="/img/gift.png" alt="">
+            <img class="featureIcon" src="../img/gift.png" alt="">
             <span class="featureTitle">GIFT CARDS</span>
             <span class="featureDesc">Compre gifts-card e use códigos de cupom facilmente.</span>
         </div>
         <div class="feature">
-            <img class="featureIcon" src="/img/contact.png" alt="">
+            <img class="featureIcon" src="../img/contact.png" alt="">
             <span class="featureTitle">CONTATE-NOS!</span>
             <span class="featureDesc">Mantenha contato por e-mail e pelo sistema de suporte.</span>
         </div>
     </div>
 
     <div class="product" id="product">
-        <img src="/img/air.png" alt="" class="productImg">
+        <img src="../img/air.png" alt="" class="productImg">
         <div class="productDetails">
             <h1 class="productTitle">AIR FORCE</h1>
             <h2 class="productPrice">R$885</h2>
@@ -137,8 +137,8 @@
             <input type="text" placeholder="Rua." class="payInput">
             <h1 class="payTitle">informação do cartão</h1>
             <div class="cardIcons">
-                <img src="/img/visa.png" width="40" alt="" class="cardIcon">
-                <img src="/img/master.png" alt="" width="40" class="cardIcon">
+                <img src="../img/visa.png" width="40" alt="" class="cardIcon">
+                <img src="../img/master.png" alt="" width="40" class="cardIcon">
             </div>
             <input type="password" class="payInput" placeholder="Número do cartão">
             <div class="cardInfo">
@@ -229,10 +229,10 @@
             <div class="footerRightMenu">
                 <h1 class="fMenuTitle">Siga-nos</h1>
                 <div class="fIcons">
-                    <img src="/img/facebook.png" alt="" class="fIcon">
-                    <img src="/img/twitter.png" alt="" class="fIcon">
-                    <img src="/img/instagram.png" alt="" class="fIcon">
-                    <img src="/img/whatsapp.png" alt="" class="fIcon">
+                    <img src="../img/facebook.png" alt="" class="fIcon">
+                    <img src="../img/twitter.png" alt="" class="fIcon">
+                    <img src="../img/instagram.png" alt="" class="fIcon">
+                    <img src="../img/whatsapp.png" alt="" class="fIcon">
                 </div>
             </div>
             <div class="footerRightMenu">
