--- a/Pagina Inicial/PaginaInicial.html
+++ b/Pagina Inicial/PaginaInicial.html
@@ -9,7 +9,14 @@
         rel="stylesheet">
     <link rel="stylesheet" href="PaginaInicial.css">
     <title>Sneakers</title>
+
+    <style>
+        .slider {
+      background-image: url('../img/FundoPage.png');
+        }   
+    </style>
 </head>
+
 
 <body>
     <nav id="nav">
