--- a/Pagina Inicial/PaginaInicial.html
+++ b/Pagina Inicial/PaginaInicial.html
@@ -31,7 +31,7 @@
                 </div>
             </div>
             <div class="navItem">
-                <a href="/Login/Login.html"><button class="Login">Login</button></a>
+                <a href="../Login/Login.html"><button class="Login">Login</button></a>
             </div>
         </div>
         <div class="navBottom">
