--- a/Login/Login.html
+++ b/Login/Login.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sneakers</title>
     <link rel="stylesheet" href="Login.css">
+    <style>
+        body{
+            background-image: url('../img/FundoPage.png');
+        }
+    </style>
 </head>
 <body>
 
@@ -41,7 +46,7 @@
                     <label><input type="checkbox">Lembrar senha</label>
                     <a href="#">Esqueceu sua senha?</a>
                 </div>
-                    <button type="submit" class="btn"><a href="/Pagina Inicial/PaginaInicial.html">Login</a></button>
+                    <button type="submit" class="btn"><a href="/PaginaInicial/PaginaInicial.html">Login</a></button>
                 <div class="login-register">
                     <p>Não possui uma conta? <a href="#" class="register-link">Registre-se</a></p>
                 </div>
