--- a/Login/Login.html
+++ b/Login/Login.html
@@ -46,7 +46,7 @@
                     <label><input type="checkbox">Lembrar senha</label>
                     <a href="#">Esqueceu sua senha?</a>
                 </div>
-                    <button type="submit" class="btn"><a href="/PaginaInicial/PaginaInicial.html">Login</a></button>
+                    <button type="submit" class="btn"><a href="../PaginaInicial/PaginaInicial.html">Login</a></button>
                 <div class="login-register">
                     <p>Não possui uma conta? <a href="#" class="register-link">Registre-se</a></p>
                 </div>
